= 3.3.4.2 = *	Uploader permission error fix *	VIP Function fix (thanks to Vincent Prat) *	orderby version added to get_downloads function *	Case of filesize units modified *	$user_ID fix in download.php - used to be null for non-logged in, now it equals 0 *	Removed Display Table from images on download page to prevent stretching
git-svn-id: https://plugins.svn.wordpress.org/download-monitor/trunk@254480 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/page-addon/styles.css
+++ b/page-addon/styles.css
@@ -140,7 +140,6 @@ div#download-page-featured img {
 	border:1px solid #ddd;
 	vertical-align: middle;
 	margin: 0 8px 0 0;
-	display: table-cell;
 }
 div#download-page-featured span {
 	display: table-cell;
